erDiagram
    Direccion{
        int id_direccion PK
        varchar calle
        int numero
        varchar localidad  
    }
    Organizacion{
        int id_Organizacion PK
        varchar nombre
        varchar descripcion
        varchar telefono
        varchar email
    }
    TipoDocumento{
        int id_tipoDocumento PK
        varchar nombre
        varchar abreviacion
        varchar descripcion
    }
    TipoUsuario{
        int id_tipoUsuario PK
        varchar nombre
        varchar descripcion
    }
    CustomUsuario{
        int id_usuario PK
        varchar nombre
        varchar apellido
        varchar nombreusuario
        varchar password   
        varchar documento
        varchar telefono
        varchar email
        int genero
        varchar imagen
        datetime fechaUnion
        datetime last_login
        int id_direccion FK
        int id_tipoDocumento FK
        boolean is_staff
        boolean is_superuser
        boolean is_active
        boolean is_verified
    }
    Obra{
        int id_obra PK
        varchar nombre
        varchar descripcion
        int id_Organizacion FK
        int id_direccion FK
        varchar imagen
    }
    DetalleObraUsuario{
        int id_detalleObraUsuario PK
        varchar descripcion
        date fechaIngreso
        int id_obra FK
        int id_usuario FK
        int id_tipoUsuario FK
    }
    Stock{
        int id_stock PK
        int id_obra FK
    }
    Categoria{
        int id_categoria PK
        varchar nombre
        varchar descripcion
    }
    Producto{
        int id_producto PK
        varchar nombre
        varchar descripcion
        int id_categoria FK
        int unidadMedida FK
        varchar talle
        int cantidad_por_unidad
        varchar imagen
        boolean perecedero
        boolean tiene_talle
        boolean enlatado
        boolean requiere_refrigeracion
        boolean sin_TAC
        boolean sin_azucares
    }
    DetalleStockProducto{
        int id_detalleStockProducto PK
        float cantidad
        boolean checkpoint
        datetime fecha_creacion
        int id_stock FK
        int id_producto FK
        int id_usuario FK
    }
    EstadoPedido{
        int id_estadoPedido PK
        varchar nombre
        varchar descripcion
    }
    Pedido{
        int id_pedido PK
        date fechaInicio
        date fechaVencimiento
        int cantidad
        int urgente
        int id_obra FK
        int id_usuario FK
        int id_producto FK
        int id_estadoPedido FK
    }
    AportePedido{
        int id_aportePedido PK
        varchar descripcion
        int cantidad
        int id_pedido FK
    }
    EstadoOferta{
        int id_estadoOferta PK
        varchar nombre
        varchar descripcion
    }
    Oferta{
        int id_oferta PK
        date fechaInicio
        date fechaVencimiento
        int cantidad
        int id_usuario FK
        int id_obra FK
        int id_producto FK
        int id_estadoOferta FK
    }
    AporteOferta{
        int id_aporteOferta PK
        varchar descripcion
        int cantidad
        int id_oferta FK
    }
    Transporte{
        int id_transporte PK
        varchar marca
        varchar modelo
        varchar patente
        int kilometraje
        varchar estadoITV
        year anio
        varchar imagen
        boolean necesita_mantenimiento
        varchar descripcion_mantenimiento
    }
    DetalleObraTransporte{
        int id_detalleObraTransporte PK
        int id_obra FK
        int id_transporte FK
    }
    DetalleObraPedido{
        int id_DetalleObraPedido PK
        int id_stock FK
        int id_pedido FK
    }
    Notificacion{
        int id_notificacion PK
        varchar titulo
        varchar descripcion
        tinyint viewed
        datetime fecha_creacion
        int id_usuario FK
    }
    
Organizacion ||--|{ Obra : "tiene"
Transporte ||--|{ DetalleObraTransporte : "tiene"
Obra ||--|{ DetalleObraTransporte : "assigned to"
Obra }|--|| Direccion : "tiene"
Obra ||--|{ Stock : "tiene"
TipoUsuario ||--|{ DetalleObraUsuario : "tiene"

CustomUsuario ||--|{ DetalleObraUsuario : "tiene"
Obra ||--|{ DetalleObraUsuario : "tiene"
CustomUsuario ||--|{ Pedido : "tiene"
CustomUsuario ||--|{ Oferta : "tiene"
CustomUsuario }|--|| Direccion : "tiene"
TipoDocumento ||--|{ CustomUsuario : "tiene"

Obra ||--|{ Pedido : "requested by"
Obra ||--|{ Oferta : "offered from"
Obra ||--|{ Stock : "belongs to"

Pedido ||--|{ AportePedido : "tiene"
Oferta ||--|{ AporteOferta : "tiene"
EstadoPedido ||--|{ Pedido : "tiene"
EstadoOferta ||--|{ Oferta : "tiene"

Categoria ||--|{ Producto : "tiene"

Stock ||--|{ DetalleStockProducto : "tiene"
Producto ||--|{ DetalleStockProducto : "tiene"
CustomUsuario ||--|{ DetalleStockProducto : "tiene"

Producto ||--|{ Pedido : "tiene"
Producto ||--|{ Oferta : "tiene"
CustomUsuario ||--|{ Pedido : "tiene"

DetalleObraPedido }|--|| Stock : "contains"
DetalleObraPedido }|--|| Pedido : "contains"
CustomUsuario ||--|{ Notificacion : "belongs to"